// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileShares collaborators list correctly passes the shared parent route to the collaborator list item 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex">
    <h3 class="oc-text-bold oc-text-medium oc-m-rm">Share with people</h3>
    <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/webui/next/owncloud_web/web_for_users.html#sharing" text="Enter a name or group to share this item." title="Invite specific people"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="" savebuttonlabel="Share"></invite-collaborator-form-stub>
  <div class="avatars-wrapper oc-flex oc-flex-middle oc-flex-between">
    <h4 class="oc-text-bold oc-my-rm">Shared with</h4>
  </div>
  <ul aria-label="Share receivers" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub share="[object Object]" sharedparentroute="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
  <!---->
  <!---->
</div>
`;

exports[`FileShares collaborators list renders sharedWithLabel and sharee list 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex">
    <h3 class="oc-text-bold oc-text-medium oc-m-rm">Share with people</h3>
    <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/webui/next/owncloud_web/web_for_users.html#sharing" text="Enter a name or group to share this item." title="Invite specific people"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="" savebuttonlabel="Share"></invite-collaborator-form-stub>
  <div class="avatars-wrapper oc-flex oc-flex-middle oc-flex-between">
    <h4 class="oc-text-bold oc-my-rm">Shared with</h4>
  </div>
  <ul aria-label="Share receivers" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
  <div class="oc-flex oc-flex-center">
    <oc-button-stub appearance="raw" class="toggle-shares-list-btn" gapsize="medium" justifycontent="center" size="medium" submit="button" type="button" variation="passive">Show less</oc-button-stub>
  </div>
  <!---->
</div>
`;

exports[`FileShares current space loads space members if a space is given and the current user is member 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex">
    <h3 class="oc-text-bold oc-text-medium oc-m-rm">Share with people</h3>
    <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/webui/next/owncloud_web/web_for_users.html#sharing" text="Enter a name or group to share this item." title="Invite specific people"></oc-contextual-helper-stub>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="" savebuttonlabel="Share"></invite-collaborator-form-stub>
  <div class="avatars-wrapper oc-flex oc-flex-middle oc-flex-between">
    <h4 class="oc-text-bold oc-my-rm">Shared with</h4>
  </div>
  <ul aria-label="Share receivers" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
  <!---->
  <!---->
</div>
`;
